Fix bug with many items in the table not showing table any more

--- a/yukon/html/monitor/style/style.css
+++ b/yukon/html/monitor/style/style.css
@@ -52,7 +52,7 @@ form#interface-selection-form {
 
 #cy {
     width: 100%;
-    height: 94%;
+    height: 99%;
     display: block;
 }
 
